Fix masthead and page__footer overlapping full screen video

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -482,7 +482,7 @@ a.reversefootnote {
 
 /*
    Responsive Video Embed
-      ========================================================================== */
+   ========================================================================== */
 
 .responsive-video-container {
   position: relative;
@@ -500,5 +500,13 @@ a.reversefootnote {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+/* full screen video fixes */
+:-webkit-full-screen-ancestor {
+   .masthead,
+   .page__footer {
+    position: static;
   }
 }
